tests/negative/modules/fixtures/import_type_error_helper.tx
export function brokenType(): int {
    let value: string = 42;
    return 0;
}
